--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="/">
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" />
+    <link rel="css" href="%PUBLIC_URL%/assets/fonts.css" />
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- link rel="manifest" href="%PUBLIC_URL%/manifest.json" / -->
+    <!-- link rel="manifest" href="%PUBLIC_URL%/assets/manifest.json" / -->
     <title>m3u-filter</title>
   </head>
   <body>
